--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
- "username": "mineboty",
- "ip": "in-1.rudracloud.com",
- "port": "1510",
- "password": "",
- "loginmsg": "kartik",
+ "username":GIVIKA",
+ "ip": "Mayanagrifromdeep.aternos.me",
+ "port": "17657",
+ "password": "Asusa153060",
+ "loginmsg": "Givika",
  "_comment": "Loginmsg is used to make login the bot"
 }
