--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
- "username":GIVIKA",
+ "username": "GIVIKA",
  "ip": "Mayanagrifromdeep.aternos.me",
  "port": "17657",
  "password": "Asusa153060",
